Fixing spacing between services

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -2700,7 +2700,7 @@ body {
     width: 80vw;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 
     @media (max-width: $large) {
@@ -2722,7 +2722,7 @@ body {
       padding: 0;
     }
 
-    @media (max-width: $medium) {
+    @media (max-width: $small) {
       flex-direction: column;
     }
 
@@ -2734,7 +2734,7 @@ body {
       justify-content: justify;
       align-items: center;
       border: 4px solid rgb(103, 103, 103);
-      margin: 0 15px;
+      margin: 10px 15px;
       padding-bottom: 20px;
       mid-width: 300px;
       flex-shrink: 0;
